Checkpoint adding ui

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,56 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+   .bounce-left {
+      animation: bounce-left .9s linear both
+   }
+
+   @keyframes bounce-left {
+      0% {
+         transform: translateX(-48px);
+         animation-timing-function: ease-in;
+         opacity: 1
+      }
+
+      24% {
+         opacity: 1
+      }
+
+      40% {
+         transform: translateX(-26px);
+         animation-timing-function: ease-in
+      }
+
+      65% {
+         transform: translateX(-13px);
+         animation-timing-function: ease-in
+      }
+
+      82% {
+         transform: translateX(-6.5px);
+         animation-timing-function: ease-in
+      }
+
+      93% {
+         transform: translateX(-4px);
+         animation-timing-function: ease-in
+      }
+
+      25%,
+      55%,
+      75%,
+      87%,
+      98% {
+         transform: translateX(0);
+         animation-timing-function: ease-out
+      }
+
+      100% {
+         transform: translateX(0);
+         animation-timing-function: ease-out;
+         opacity: 1
+      }
+   }
+}
