--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,4 +53,41 @@
          opacity: 1
       }
    }
+
+   .shake-left-right {
+      animation: shake-left-right 0.8s linear both
+   }
+
+   @keyframes shake-left-right {
+
+      0%,
+      100% {
+         transform: rotate(0deg);
+         transform-origin: 50% 50%
+      }
+
+      10% {
+         transform: rotate(8deg)
+      }
+
+      20%,
+      40%,
+      60% {
+         transform: rotate(-10deg)
+      }
+
+      30%,
+      50%,
+      70% {
+         transform: rotate(10deg)
+      }
+
+      80% {
+         transform: rotate(-8deg)
+      }
+
+      90% {
+         transform: rotate(8deg)
+      }
+   }
 }
