--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+   :root {
+      --textColor: rgb(2, 6, 23);
+      --bgColor: rgb(255, 255, 255);
+   }
+
+   .theme-dark {
+      --textColor: rgb(206, 207, 212);
+      --bgColor: rgb(2, 6, 23);
+   }
+}
+
 @layer components {
    .bounce-left {
       animation: bounce-left .9s linear both
@@ -120,6 +132,4 @@
          transform: translate(0)
       }
    }
-
-
 }
