Adding Google Authentication

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,7 +13,7 @@
       --bgColor: rgb(2, 6, 23);
    }
 
-   .svg-icon {
+   .github-icon {
       width: 50px;
       /* Adjusted width */
       height: 50px;
